--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Conditions d'Utilisation</h1>
-    <p><strong>Dernière mise à jour : [Date]</strong></p>
+    <p><strong>Dernière mise à jour : 06/02/2025</strong></p>
     
     <p>Bienvenue sur <strong>Educational TikTok Video Uploader</strong> ! En utilisant notre application, vous acceptez ces conditions d'utilisation. Veuillez les lire attentivement.</p>
 
