--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Politique de Confidentialité</h1>
-    <p><strong>Dernière mise à jour : [Date]</strong></p>
+    <p><strong>Dernière mise à jour : 06/02/2025</strong></p>
 
     <p>Nous attachons une grande importance à la protection de vos données personnelles. Cette politique explique quelles informations nous collectons et comment nous les utilisons.</p>
 
